Various SQL optimizations.

--- a/spud/templates/spud/photo_detail.html
+++ b/spud/templates/spud/photo_detail.html
@@ -4,9 +4,9 @@
 {% load webs %}
 {% load comments %}
 
-{% block title %}{{ object.photo }} page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}{% endblock %}
-{% block object_title %}{{ object.photo }} page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}{% endblock %}
-{% block tools %}{% show_photo_buttons user web parent page_obj.number object.photo object.size %}{% endblock %}
+{% block title %}{{ photo }} page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}{% endblock %}
+{% block object_title %}{{ photo }} page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}{% endblock %}
+{% block tools %}{% show_photo_buttons user web parent page_obj.number photo object.size %}{% endblock %}
 
 {% block extrahead %}
 <script type="text/javascript">
@@ -14,13 +14,12 @@ var prev_photo_url="{% photo_url_prev page_obj web parent object.size %}"
 var next_photo_url="{% photo_url_next page_obj web parent object.size %}"
 var prev_photo_thumb_url="{% photo_thumb_url_prev page_obj web parent object.size %}"
 var next_photo_thumb_url="{% photo_thumb_url_next page_obj web parent object.size %}"
-var this_photo_thumb_url="{% get_thumb_url object %}"
+var this_photo_thumb_url="{% get_photo_thumb_url photo object.size %}"
 </script>
-<script type="text/javascript" src="{{ MEDIA_URL }}js/mouse.js" />
+<script type="text/javascript" src="{{ MEDIA_URL }}js/mouse.js"></script>
 {% endblock %}
 
 {% block object %}
-{% with object.photo as photo %}
 {% if photo.action %}
 <ul class="messagelist">
 <li>Marked action: {% show_action_with_url photo.action %}</li>
@@ -30,7 +29,7 @@ var this_photo_thumb_url="{% get_thumb_url object %}"
 <div class='photo_container photo_detail {{photo.get_style}}'>
 <div class='photo_block photo_detail_photo'>
 
-<img id="photo" src="{% get_thumb_url object %}" alt="{{ photo.title }}" width="{{ object.width }}" height="{{ object.height }}"/>
+<img id="photo" src="{% get_photo_thumb_url photo object.size %}" alt="{{ photo.title }}" width="{{ object.width }}" height="{{ object.height }}"/>
 <script type="text/javascript">
 resize_photo(document.getElementById("photo"), {{ object.width }}, {{ object.height }})
 </script>
@@ -38,7 +37,7 @@ resize_photo(document.getElementById("photo"), {{ object.width }}, {{ object.hei
 <div class="title">{{ photo }}</div>
 <div class="search">Search {% get_description parent %} page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</div>
 {% if photo.photo_person_set.all %}
-{% for pp in photo.photo_person_set.all %}
+{% for pp in photo.photo_person_set.select_related.all %}
     <a href="{% get_view_url pp.person %}">{{pp.person}}</a> ({{pp.position}}){% if not forloop.last %}, {% endif %}
 {% endfor %}
 {% endif %}
@@ -60,12 +59,12 @@ resize_photo(document.getElementById("photo"), {{ object.width }}, {{ object.hei
 <dt>Location</dt><dd><a href="{% get_view_url photo.location %}">{{ photo.location }}</a></dd>
 {% endif %}
 <dt>Albums</dt><dd>
-  {% for pa in photo.photo_album_set.all %}
+  {% for pa in photo.photo_album_set.select_related.all %}
     <a href="{% get_view_url pa.album %}">{{pa.album}}</a>{% if not forloop.last %}; {% endif %}
   {% endfor %}
 </dd>
 <dt>Categories</dt><dd>
-  {% for pc in photo.photo_category_set.all %}
+  {% for pc in photo.photo_category_set.select_related.all %}
     <a href="{% get_view_url pc.category %}">{{pc.category}}</a>{% if not forloop.last %}; {% endif %}
   {% endfor %}
 </dd>
@@ -150,5 +149,4 @@ resize_photo(document.getElementById("photo"), {{ object.width }}, {{ object.hei
 </div>
 
 {% photo_pagination page_obj web parent object.size %}
-{% endwith %}
 {% endblock %}
