--- a/spud/templates/registration/login.html
+++ b/spud/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends "base_site.html" %}
 {% load i18n %}
 
-{% block stylesheet %}{{ MEDIA_URL }}css/login.css{% endblock %}
+{% block stylesheet %}{{ STATIC_URL }}css/login.css{% endblock %}
 
 {% block bodyclass %}login{% endblock %}
 
