--- a/spud/templates/spud/photo_edit.html
+++ b/spud/templates/spud/photo_edit.html
@@ -15,7 +15,7 @@ var prev_photo_thumb_url="None"
 var next_photo_thumb_url="None"
 var this_photo_thumb_url="{% get_photo_thumb_url photo object.size %}"
 </script>
-<script type="text/javascript" src="{{ MEDIA_URL }}js/mouse.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/mouse.js"></script>
 {% endblock %}
 
 {% block object %}
