--- a/spud/templates/spud/photo_detail.html
+++ b/spud/templates/spud/photo_detail.html
@@ -16,7 +16,7 @@ var prev_photo_thumb_url="{% photo_thumb_url_prev page_obj web parent object.siz
 var next_photo_thumb_url="{% photo_thumb_url_next page_obj web parent object.size %}"
 var this_photo_thumb_url="{% get_photo_thumb_url photo object.size %}"
 </script>
-<script type="text/javascript" src="{{ MEDIA_URL }}js/mouse.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/mouse.js"></script>
 {% endblock %}
 
 {% block object %}
