--- a/spud/templates/spud/search_list.html
+++ b/spud/templates/spud/search_list.html
@@ -1,10 +1,11 @@
-{% extends "base_site.html" %}
+{% extends "main.html" %}
 {% load i18n %}
 {% load photo %}
 
 {% block title %}Search{% endblock %}
 
 {% block content %}
+<div id="content-main">
 
 <h1>Search</h1>
 
@@ -13,4 +14,5 @@
 <input type="submit" />
 </form>
 
+</div>
 {% endblock %}
