--- a/spud/static/css/global.css
+++ b/spud/static/css/global.css
@@ -1,7 +1,7 @@
 body { margin:0; padding:0; font-size:11px; font-family:"Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif; color:#333; background:#fff; }
 
-.ui-autocomplete-input { width:320px; }
-.ui-autocomplete { overflow-x:hidden; overflow-y:auto; max-height:500px; }
+.ui-autocomplete-input { width:100%; }
+.ui-autocomplete { overflow-x:hidden; overflow-y:auto; max-height:500px; max-width:340px; }
 .ui-corner-all { padding-top:4px; padding-bottom:4px; }
 .ui-corner-all img { float:left; }
 .ui-corner-all .title { margin-left:140px; font-weight:bold; }
