--- a/spud/templates/base.html
+++ b/spud/templates/base.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="{{ LANGUAGE_CODE }}" xml:lang="{{ LANGUAGE_CODE }}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
+{% load admin_static %}{% load url from future %}<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="{{ LANGUAGE_CODE|default:"en-us" }}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
 <head>
-<title>{% block title %}{% endblock %}</title>
-<link rel="stylesheet" type="text/css" href="{% block stylesheet %}{{ STATIC_URL }}css/base.css{% endblock %}" />
+<title>{% block title %}{% endblock %}&nbsp;|&nbsp;{% block site_name_title %}{% endblock %}</title>
+<link rel="stylesheet" type="text/css" href="{% block stylesheet %}{% static "css/base.css" %}{% endblock %}" />
 {% block extrastyle %}{% endblock %}
-<!--[if lte IE 7]><link rel="stylesheet" type="text/css" href="{% block stylesheet_ie %}{% load adminmedia %}{% admin_media_prefix %}css/ie.css{% endblock %}" /><![endif]-->
-{% if LANGUAGE_BIDI %}<link rel="stylesheet" type="text/css" href="{% block stylesheet_rtl %}{% admin_media_prefix %}css/rtl.css{% endblock %}" />{% endif %}
-<script type="text/javascript">window.__admin_media_prefix__ = "{% filter escapejs %}{% admin_media_prefix %}{% endfilter %}";</script>
+<!--[if lte IE 7]><link rel="stylesheet" type="text/css" href="{% block stylesheet_ie %}{% static "css/ie.css" %}{% endblock %}" /><![endif]-->
+{% if LANGUAGE_BIDI %}<link rel="stylesheet" type="text/css" href="{% block stylesheet_rtl %}{% static "css/rtl.css" %}{% endblock %}" />{% endif %}
+<script type="text/javascript">window.__admin_media_prefix__ = "{% filter escapejs %}{% static "admin/" %}{% endfilter %}";</script>
 {{ media }}
 {% block extrahead %}{% endblock %}
 {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE" />{% endblock %}
@@ -26,58 +26,48 @@
         <div id="branding">
         {% block branding %}{% endblock %}
         </div>
+        {% block usertools %}
         <div id="user-tools">
-            {% if user.is_authenticated %}
             {% trans 'Welcome,' %}
+            {% if user.is_active %}
             <strong>{% filter force_escape %}{% firstof user.first_name user.username %}{% endfilter %}</strong>.
+            {% else %}
+            <strong>{% trans 'Guest' %}</strong>
             {% endif %}
             {% block userlinks %}
-                {% url django-admindocs-docroot as docsroot %}
+                {% if user.is_active %}
+                {% url 'django-admindocs-docroot' as docsroot %}
                 {% if docsroot %}
                     <a href="{{ docsroot }}">{% trans 'Documentation' %}</a> /
                 {% endif %}
-                {% if user.is_authenticated %}
-                {% url password_change as password_change_url %}
-                {% if password_change_url %}
-                    <a href="{{ password_change_url }}">
+                <a href="{% url 'settings_form' %}{% url_with_param next=request.path %}">Settings</a> /
+                <a href="{% url 'password_change' %}">{% trans 'Change password' %}</a> /
+                <a href="{% url 'logout' %}">{% trans 'Log out' %}</a>
                 {% else %}
-                    <a href="{{ root_path }}password_change/">
-                {% endif %}
-                {% trans 'Change password' %}</a> /
-                <a href="{% url settings_form %}{% url_with_param next=request.path %}">Settings</a> /
-                {% url logout as logout_url %}
-                {% if logout_url %}
-                    <a href="{{ logout_url }}">
-                {% else %}
-                    <a href="{{ root_path }}logout/">
-                {% endif %}
-                {% trans 'Log out' %}</a>
-                {% else %}
-                <div id="user-tools">
-                <a href="{% url settings_form %}{% url_with_param next=request.path %}">Settings</a> /
-                <a href="{% url login %}{% url_with_param next=request.path %}">{% trans 'Log in' %}</a>
-                </div>
+                <a href="{% url 'settings_form' %}{% url_with_param next=request.path %}">Settings</a> /
+                <a href="{% url 'login' %}{% url_with_param next=request.path %}">{% trans 'Log in' %}</a>
                 {% endif %}
             {% endblock %}
         </div>
+        {% endblock %}
         {% block nav-global %}{% endblock %}
     </div>
     <!-- END Header -->
     {% block breadcrumbs %}{% show_breadcrumbs breadcrumbs %}{% endblock %}
     {% endif %}
 
+    {% block messages %}
         {% if messages %}
         <ul class="messagelist">{% for message in messages %}
           <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-	{% endfor %}</ul>
+        {% endfor %}</ul>
         {% endif %}
+    {% endblock messages %}
 
     <!-- Content -->
     <div id="content" class="{% block coltype %}colM{% endblock %}">
         {% block pretitle %}{% endblock %}
-        {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
         {% block content %}
-        {% block object-tools %}{% endblock %}
         {{ content }}
         {% endblock %}
         {% block sidebar %}{% endblock %}
