--- a/spud/templates/spud/settings_form.html
+++ b/spud/templates/spud/settings_form.html
@@ -1,10 +1,11 @@
-{% extends "base_site.html" %}
+{% extends "main.html" %}
 {% load i18n %}
 {% load photo %}
 
 {% block title %}Settings{% endblock %}
 
 {% block content %}
+<div id="content-main">
 
 <h1>Settings</h1>
 
@@ -15,4 +16,5 @@
 <input type="submit" />
 </form>
 
+</div>
 {% endblock %}
