Use jquery.blockUI.js for loading/error status.

--- a/spud/templates/html/static.html
+++ b/spud/templates/html/static.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/jquery-ui.css' %}" />
 <script type="text/javascript" src="{% static 'js/jquery.js' %}" />
 <script type="text/javascript" src="{% static 'js/jquery-ui.js' %}" />
+<script type="text/javascript" src="{% static 'js/jquery.blockUI.js' %}" />
 <script type="text/javascript" src="{% static 'js/ajax_select.js' %}" />
 <script type="text/javascript" src="{% static 'js/photos.js' %}" />
 {% endblock %}
@@ -25,7 +26,5 @@
 
 {% block content %}
 <div id="content-main">
-</div>
-<div id="status">
 </div>
 {% endblock %}
