--- a/spud/static/css/global.css
+++ b/spud/static/css/global.css
@@ -38,6 +38,8 @@ body { margin:0; padding:0; font-size:11px; font-family:"Lucida Grande","DejaVu 
 .photo_list li .desc { float:left; display:none; }
 .photo_list li:HOVER { border:1px solid #000; }
 .photo_list li:HOVER .desc { display:inline; background:#ddd; foreground:#000; border:1px solid #000; position:relative; left:-25px; top:0px; z-index:100; width:200px; padding:10px; }
+.photo_list .ui-selecting { background: #FECA40; }
+.photo_list .ui-selected { background: #F39814; }
 
 /* PAGINATOR */
 .paginator { padding-top:10px; padding-bottom:10px; line-height:22px; margin:0; solid #ddd; }
