--- a/spud/static/css/global.css
+++ b/spud/static/css/global.css
@@ -153,7 +153,7 @@ input[type=text], input[type=password], textarea, select, .vTextField { border:1
 .button.default:active, input[type=submit].default:active { background-image:url(../img/admin/default-bg-reverse.gif); background-position:top; }
 
 /* MODULES */
-.module { border:1px solid #ccc; margin-bottom:5px; background:white; }
+.module { border:1px solid #ccc; margin:5px; background:white; }
 .module p, .module ul, .module h3, .module h4, .module dl, .module pre { padding-left:10px; padding-right:10px; }
 .module blockquote { margin-left:12px; }
 .module ul, .module ol { margin-left:1.5em; }
@@ -201,6 +201,43 @@ a.deletelink:hover { color:#993333; }
 /* OBJECT HISTORY */
 table#change-history { width:100%; }
 table#change-history tbody th { width:16em; }
+
+/* SLIDE SHOW */
+.slideshow {
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: block;
+}
+.slideshow .photo {
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: #000;
+    color: #aaa;
+}
+
+.overlapped h2 {
+    display: none;
+}
+
+#content-related.overlapped {
+    position: absolute;
+    top: 10px;
+    display: block;
+    color: #aaa;
+    background: url('../img/bg-black.png');
+}
+
+.overlapped .module {
+    background: transparent;
+}
+
+.prevslide, .nextslide{ position:absolute; height:43px; width:43px; top:50%; margin-top:-21px; opacity:0.6; }
+.prevslide{ left:10px; background:url('../img/back.png'); }
+.nextslide{ right:10px; background:url('../img/forward.png'); }
+.prevslide:active, .nextslide:active{ margin-top:-19px; }
+.prevslide:hover, .nextslide:hover{ cursor:pointer; }
 
 @media screen and (max-width: 700px) {
 .menu { padding:0 10px; margin:0; }
