Prepare for js split.

--- a/spud/templates/html/static.html
+++ b/spud/templates/html/static.html
@@ -19,7 +19,16 @@
 <script type="text/javascript" src="{% static 'js/jquery-ui.js' %}" />
 <script type="text/javascript" src="{% static 'js/jquery.blockUI.js' %}" />
 <script type="text/javascript" src="{% static 'js/jcookie.js' %}" />
-<script type="text/javascript" src="{% static 'js/photos.js' %}" />
+<script type="text/javascript" src="{% static 'js/urls.js' %}" />
+<script type="text/javascript" src="{% static 'js/base.js' %}" />
+<script type="text/javascript" src="{% static 'js/album.js' %}" />
+<script type="text/javascript" src="{% static 'js/category.js' %}" />
+<script type="text/javascript" src="{% static 'js/place.js' %}" />
+<script type="text/javascript" src="{% static 'js/person.js' %}" />
+<script type="text/javascript" src="{% static 'js/photo.js' %}" />
+<script type="text/javascript" src="{% static 'js/search.js' %}" />
+<script type="text/javascript" src="{% static 'js/spud.js' %}" />
+
 {% endblock %}
 
 {% block bodyattrs %}onload="{{ onload }}"{% endblock %}
