--- a/spud/templates/html/static.html
+++ b/spud/templates/html/static.html
@@ -19,6 +19,7 @@
 <script type="text/javascript" src="{% static 'js/jquery-ui.js' %}" />
 <script type="text/javascript" src="{% static 'js/jquery.blockUI.js' %}" />
 <script type="text/javascript" src="{% static 'js/jcookie.js' %}" />
+<script type="text/javascript" src="{% static 'js/showdown.js' %}" />
 <script type="text/javascript" src="{% static 'js/urls.js' %}" />
 <script type="text/javascript" src="{% static 'js/base.js' %}" />
 <script type="text/javascript" src="{% static 'js/album.js' %}" />
