--- a/spud/templates/html/static.html
+++ b/spud/templates/html/static.html
@@ -22,6 +22,7 @@
 <script type="text/javascript" src="{% static 'js/showdown.js' %}" />
 <script type="text/javascript" src="{% static 'js/urls.js' %}" />
 <script type="text/javascript" src="{% static 'js/base.js' %}" />
+<script type="text/javascript" src="{% static 'js/generic.js' %}" />
 <script type="text/javascript" src="{% static 'js/photo.js' %}" />
 <script type="text/javascript" src="{% static 'js/album.js' %}" />
 <script type="text/javascript" src="{% static 'js/category.js' %}" />
