Split base.js apart.

--- a/spud/templates/html/static.html
+++ b/spud/templates/html/static.html
@@ -15,13 +15,17 @@
 {% block extrahead %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/ajax_select.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'css/jquery-ui.css' %}" />
+
 <script type="text/javascript" src="{% static 'js/jquery.js' %}" />
 <script type="text/javascript" src="{% static 'js/jquery-ui.js' %}" />
 <script type="text/javascript" src="{% static 'js/jquery.blockUI.js' %}" />
 <script type="text/javascript" src="{% static 'js/jcookie.js' %}" />
 <script type="text/javascript" src="{% static 'js/showdown.js' %}" />
+
 <script type="text/javascript" src="{% static 'js/urls.js' %}" />
 <script type="text/javascript" src="{% static 'js/base.js' %}" />
+<script type="text/javascript" src="{% static 'js/dialog.js' %}" />
+<script type="text/javascript" src="{% static 'js/infobox.js' %}" />
 <script type="text/javascript" src="{% static 'js/generic.js' %}" />
 <script type="text/javascript" src="{% static 'js/photo.js' %}" />
 <script type="text/javascript" src="{% static 'js/album.js' %}" />
