Change how dialog/info box fields interact

--- a/spud/templates/html/static.html
+++ b/spud/templates/html/static.html
@@ -26,6 +26,7 @@
 <script type="text/javascript" src="{% static 'js/base.js' %}" />
 <script type="text/javascript" src="{% static 'js/dialog.js' %}" />
 <script type="text/javascript" src="{% static 'js/infobox.js' %}" />
+<script type="text/javascript" src="{% static 'js/session.js' %}" />
 <script type="text/javascript" src="{% static 'js/generic.js' %}" />
 <script type="text/javascript" src="{% static 'js/photo.js' %}" />
 <script type="text/javascript" src="{% static 'js/album.js' %}" />
