--- a/spud/static/css/global.css
+++ b/spud/static/css/global.css
@@ -35,10 +35,10 @@ ul.ui-autocomplete { z-index: 200; }
 
 .photo_list { border:1px solid #333; margin-bottom: 10px; }
 .photo_list .title { font-weight:bold; }
-.photo_list li { display:inline-block; vertical-align:top; height:150px; margin:10px; padding-top:10px; text-align: center; width:170px; }
-.photo_list li .desc { float:left; display:none; }
-.photo_list li:HOVER { border:1px solid #000; }
-.photo_list li:HOVER .desc { display:inline; background:#ddd; foreground:#000; border:1px solid #000; position:relative; left:-25px; top:0px; z-index:100; width:200px; padding:10px; }
+.photo_list .photo_item { display:inline-block; vertical-align:top; height:150px; margin:10px; padding-top:10px; text-align: center; width:170px; }
+.photo_list .photo_item .desc { float:left; display:none; text-align:left; }
+.photo_list .photo_item:HOVER { border:1px solid #000; }
+.photo_list .photo_item:HOVER .desc { display:inline; background:#ddd; foreground:#000; border:1px solid #000; position:relative; left:-25px; top:0px; z-index:100; width:200px; padding:10px; }
 .photo_list .ui-selecting { background: #FECA40; }
 .photo_list .ui-selected { background: #F39814; }
 
