--- a/spud/static/css/global.css
+++ b/spud/static/css/global.css
@@ -54,9 +54,9 @@ ul.ui-autocomplete { z-index: 200; }
 
 /* Children list */
 .infobox { border:1px solid #dddddd; padding:10px; margin-bottom:10px; }
-.infobox dl { margin-right: 10px; }
-.infobox dt { margin-top: 10px; }
-.infobox dd { padding-left: 10px; }
+.infobox dl { margin-right: 10px; max-width:500px; }
+.infobox dt { clear:left; float:left; width:20%; margin:0; padding:5px; border-top: 1px solid #999; font-weight: bold; }
+.infobox dd { float:left; width: 70%; margin: 0; padding: 5px; border-top: 1px solid #999; }
 
 .children { border:1px solid #f00; }
 
@@ -237,6 +237,9 @@ table#change-history tbody th { width:16em; }
 .prevslide:active, .nextslide:active{ margin-top:-19px; }
 .prevslide:hover, .nextslide:hover{ cursor:pointer; }
 
+label { font-weight:normal; color:#666; font-size:12px; }
+.required label, label.required { font-weight:bold; color:#333; }
+
 @media screen and (max-width: 700px) {
 .menu { padding:0 10px; margin:0; }
 .menu li { list-style:none; border-top: 1px solid #777; padding: 20px 0; margin: 0; }
@@ -251,4 +254,4 @@ table#change-history tbody th { width:16em; }
 .paginator { line-height:42px; }
 .paginator a.relative { display:inline; }
 .paginator a, .paginator span { padding:12px 16px; display:none; }
-}
+
