Message of JavaScript disabled.

--- a/spud/templates/spud/static.html
+++ b/spud/templates/spud/static.html
@@ -39,5 +39,6 @@
 
 {% block content %}
 <div id="content-main">
+    <noscript>This website requires JavaScript. Every time you view this page without JavaScript a small cute kitten dies.</noscript>
 </div>
 {% endblock %}
