--- a/spud/templates/spud/static.html
+++ b/spud/templates/spud/static.html
@@ -13,10 +13,14 @@
 {% block extrahead %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/ajax_select.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'css/jquery-ui.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/jquery.fileupload-ui.css' %}" />
 
+<script type="text/javascript" src="{% static 'js/load-image.js' %}" />
 <script type="text/javascript" src="{% static 'js/jquery.js' %}" />
 <script type="text/javascript" src="{% static 'js/jquery-ui.js' %}" />
 <script type="text/javascript" src="{% static 'js/jquery.blockUI.js' %}" />
+<script type="text/javascript" src="{% static 'js/jquery.fileupload.js' %}" />
+<script type="text/javascript" src="{% static 'js/jquery.fileupload-ui.js' %}" />
 <script type="text/javascript" src="{% static 'js/jcookie.js' %}" />
 <script type="text/javascript" src="{% static 'js/showdown.js' %}" />
 
