Reorganize upload code.
* Split into upload.js
* Also initial upload parameters received via AJAX request.

--- a/spud/templates/spud/static.html
+++ b/spud/templates/spud/static.html
@@ -36,6 +36,7 @@
 <script type="text/javascript" src="{% static 'js/place.js' %}" />
 <script type="text/javascript" src="{% static 'js/person.js' %}" />
 <script type="text/javascript" src="{% static 'js/feedback.js' %}" />
+<script type="text/javascript" src="{% static 'js/upload.js' %}" />
 <script type="text/javascript" src="{% static 'js/spud.js' %}" />
 
 {% endblock %}
