More style improvements.

--- a/spud/static/css/global.css
+++ b/spud/static/css/global.css
@@ -16,9 +16,9 @@ ul.ui-autocomplete { z-index: 200; }
 .photo-K { background:#DDEEDD; color:#333333; }
 .photo-selected { background: #DDDDDD; }
 
-.photo_article { border:1px solid #000; }
+.photo_article { border:1px solid #000; margin-bottom: 10px; }
 
-.photo_block { display:inline-block; vertical-align:top; padding:10px; width:200px; min-height:420px; } 
+.photo_block { display:inline-block; vertical-align:top; padding:10px; width:200px; min-height:420px; }
 .photo_block { border:1px solid #ddd; margin:5px; }
 .photo_block h2 { margin:0 0 .5em 0; }
 .photo_block ul  { padding-left: 20px; }
